# cred-helper

./: .bazelrc  .gitignore  BUILD.bazel  Cargo.toml  MODULE.bazel  README.md
.github/workflows/: release.yml
cred-helper/: BUILD.bazel  Cargo.toml
cred-helper/src/: main.rs
credresolve/: BUILD.bazel  Cargo.toml  build.rs
credresolve/src/: connections.rs  credstore.rs  daemon.rs  gitlab.rs  lib.rs  uri.rs
oidc/: BUILD.bazel  Cargo.toml
oidc/src/: main.rs
proto/fastverk/v1/: BUILD.bazel  connection.proto  daemon.proto  gitlab.proto
tools/oci/: BUILD.bazel
