# fastverk/cred-helper — the standalone universal Bazel credential helper +
# its reusable `credresolve` core. Built with @rules_rust + crate_universe
# (from this cargo workspace); published as prebuilt release artifacts and as
# the `fastverk_credresolve` Bazel module.
[workspace]
members = ["credresolve", "cred-helper"]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.95.0"
license = "MIT"
repository = "https://github.com/fastverk/cred-helper"

[workspace.dependencies]
anyhow = "1.0"
prost = "0.13"
prost-build = "0.13"
directories = "5.0"
keyring = { version = "3", features = ["apple-native"] }
