# fastverk_credresolve — the fastverk credential-resolution core + the
# standalone universal Bazel credential helper.
#
# Built with @rules_rust + crate_universe over the cargo workspace (the same
# Cargo.toml/Cargo.lock cargo uses), and cross-compiled to linux/amd64 via
# hermetic_cc_toolchain (zig) so the published linux artifact + layer tar are
# x86-64 ELF even when built on a mac. All deps are public (BCR + crates.io),
# so the build needs no credentials.
module(
    name = "fastverk_credresolve",
    version = "0.1.0",
)

bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "rules_rust", version = "0.70.0")
bazel_dep(name = "protobuf", version = "33.4")
bazel_dep(name = "rules_pkg", version = "1.0.1")

# Hermetic CC via zig cc — provides the linux sysroots so a rust_binary built
# with --platforms=//tools/oci:linux_amd64 links to x86-64 Linux from a mac.
bazel_dep(name = "hermetic_cc_toolchain", version = "4.1.0")

zig_toolchains = use_extension(
    "@hermetic_cc_toolchain//toolchain:ext.bzl",
    "toolchains",
)
use_repo(zig_toolchains, "zig_sdk")

# Linux cross-compile targets only — host darwin builds use the system clang
# (zig's ld64 doesn't implement the Apple-specific linker flags Bazel emits).
# glibc 2.28 matches distroless/cc-debian12.
register_toolchains(
    "@zig_sdk//toolchain:linux_amd64_gnu.2.28",
    "@zig_sdk//toolchain:linux_arm64_gnu.2.28",
)

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2021",
    versions = ["1.95.0"],
    # rustlibs for the linux cross targets; the C linker comes from zig above.
    extra_target_triples = [
        "x86_64-unknown-linux-gnu",
        "aarch64-unknown-linux-gnu",
    ],
)
use_repo(rust, "rust_toolchains")
register_toolchains("@rust_toolchains//:all")

# crate_universe over the workspace. isolate = True so this module can be a
# bazel_dep of fvkit (which also declares a `crates` repo) without colliding.
crate = use_extension(
    "@rules_rust//crate_universe:extension.bzl",
    "crate",
    isolate = True,
)
crate.from_cargo(
    name = "crates",
    cargo_lockfile = "//:Cargo.lock",
    manifests = [
        "//:Cargo.toml",
        "//credresolve:Cargo.toml",
        "//cred-helper:Cargo.toml",
    ],
)
use_repo(crate, "crates")
