"""credresolve — the fastverk credential-resolution core library.

Proto codegen runs via cargo_build_script + build.rs (prost-build) so `cargo
build` and `bazel build` produce identical bindings. The build script data-deps
connection.proto and walks `../proto/...` from CARGO_MANIFEST_DIR = credresolve.
"""

load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")
load("@rules_rust//cargo:defs.bzl", "cargo_build_script")
load("@crates//:defs.bzl", "all_crate_deps")

package(default_visibility = ["//visibility:public"])

cargo_build_script(
    name = "build_script",
    srcs = ["build.rs"],
    data = ["//proto/fastverk/v1:connection.proto"],
    edition = "2021",
    build_script_env = {
        "PROTOC": "$(execpath @protobuf//:protoc)",
    },
    tools = ["@protobuf//:protoc"],
    deps = all_crate_deps(build = True, package_name = "credresolve"),
)

rust_library(
    name = "credresolve",
    srcs = glob(["src/**/*.rs"]),
    crate_root = "src/lib.rs",
    edition = "2021",
    deps = [":build_script"] + all_crate_deps(normal = True, package_name = "credresolve"),
)

rust_test(
    name = "credresolve_test",
    crate = ":credresolve",
    edition = "2021",
)

exports_files(["Cargo.toml", "build.rs"])
