"""fastverk-oidc — the workload-identity exchange tool (CI OIDC -> fastverk token).

A standalone binary (ureq for the one-shot HTTPS exchange); kept separate from
credresolve + the hot-path cred-helper so those stay dependency-light. Built in
CI on the native runner, so no zig cross-compile of the TLS stack is needed.
"""

load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_test")
load("@crates//:defs.bzl", "all_crate_deps")

package(default_visibility = ["//visibility:public"])

rust_binary(
    name = "fastverk-oidc",
    srcs = ["src/main.rs"],
    edition = "2021",
    deps = all_crate_deps(normal = True, package_name = "oidc"),
)

rust_test(
    name = "fastverk-oidc_test",
    crate = ":fastverk-oidc",
    edition = "2021",
)
